added tools and data sources to catalogues
